crates/musli/tests/ui/private_fn_error.stderr
error[E0603]: function `decode` is private
  --> tests/ui/private_fn_error.rs:5:26
   |
5  |     #[musli(with = self::array)]
   |                          ^^^^^ private function
   |
note: the function `decode` is defined here
  --> tests/ui/private_fn_error.rs:21:5
   |
21 | /     fn decode<'de, D, T, const N: usize>(__decoder: D) -> Result<[T; N], D::Error>
22 | |     where
23 | |         D: Decoder<'de>,
...  |
26 | |     }
   | |_____^
